text no longer spills out of drop down button if too long, all text now fits within the button

--- a/css/interactive_visualization.css
+++ b/css/interactive_visualization.css
@@ -246,7 +246,7 @@ li p{
 		/*height: 15px;*/
 		width: 100px;
 		text-align: center;
-		padding: 1px 8px;
+		padding: 1px 6px;
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
